--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -20,6 +20,9 @@
 
 .left h2 {
     font-weight: 800;
+    color: #19FFFC;
+    text-transform: uppercase;
+    letter-spacing: 2px;
 }
 
 .right {
@@ -39,6 +42,7 @@
 .right h2 {
     font-size: 3vw;
     color: #19FFFC;
+    font-weight: 600;
     -webkit-text-stroke: 1px #000;
 }
 
