--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -48,9 +48,9 @@
       <button type="submit" class="btn btn2" (click)="show()">Submit</button>
     </form>
   </div>
-  <script>
+  <!-- <script>
     document.querySelector("form").addEventListener("submit", function (e) {
       e.preventDefault();
     });
-  </script>
+  </script> -->
 </div>
