Firebase Assets Modification

--- a/src/app/components/register/register.component.css
+++ b/src/app/components/register/register.component.css
@@ -1,5 +1,5 @@
 #regmain {
-    background-image: url(/assets/loginbg.jpg);
+    background-image: url(https://firebasestorage.googleapis.com/v0/b/naniportfolio-cadd2.appspot.com/o/Restapi%2Floginbg.jpg?alt=media&token=13e9b59d-df4b-42fa-9ef8-58577124aeff);
     background-size: cover;
     position: relative;
     height: 100vh;
