--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -99,7 +99,14 @@
             <h6>Confrim your password</h6>
           </div>
         </div>
-        <button type="submit" class="btn4">Register</button>
+        <button
+          type="submit"
+          class="btn4"
+          routerLink="**"
+          routerLinkActive="active"
+        >
+          Register
+        </button>
       </form>
     </div>
   </div>
