--- a/src/app/components/sucess/sucess.component.css
+++ b/src/app/components/sucess/sucess.component.css
@@ -1,10 +1,8 @@
 #main {
     width: 100%;
     height: 100vh;
-
-    background-image: url(/assets/loginbg.jpg);
+    background-image: url(https://firebasestorage.googleapis.com/v0/b/naniportfolio-cadd2.appspot.com/o/Restapi%2Floginbg.jpg?alt=media&token=13e9b59d-df4b-42fa-9ef8-58577124aeff);
     background-size: cover;
-
     padding: 10vw 30vw;
 }
 
